--- a/Lasso Regression/Lasso regression.ipynb
+++ b/Lasso Regression/Lasso regression.ipynb
@@ -602,6 +602,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Therefore, proportion of non-retail business acres per town and proportion of owner-occupied units built prior to 1940 are not so important for house pricing in the USA."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
